worke don show and dashboard

--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -1,3 +1,13 @@
+.site-content-dashbaord {
+  height: 100%;
+  width: 100%;
+  margin-top: 0;
+  margin-bottom: 0;
+  background-color: #B4D682;
+}
+
+
+
 .dashboard-booking {
   background-color: white;
   margin-right: 15px;
