--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -23,16 +23,17 @@
   margin-bottom: 22px;
   margin-top: 7%;
 
+
   .fas {
     padding-right: 10px;
-    color: #C7374B;
-    opacity: 0.75;
+    color: #B4D682;
+    font-size: 25px;
   }
 
   p {
-    font-family: 'Nunito', sans-serif;
-    font-weight: lighter;
-    font-size: 18px;
+    font-family: 'Gaegu';
+    font-weight: 500;
+    font-size: 24px;
   }
 }
 
@@ -47,18 +48,21 @@
 }
 
 .description-show {
-  margin-top: 23%;
+  margin-top: 17%;
 }
 
 .author-show {
-  padding-left: 35px;
-  padding-right: 35px;
+  padding-left: 30px;
+  padding-right: 55px;
   position: relative;
 
 
   h2{
     padding-bottom: 1px;
-    font-size: 25px;
+    font-family: 'Gaegu';
+    font-weight: 500;
+    font-size: 43px;
+    color: #F0BD68;
   }
 
   h3{
@@ -69,11 +73,14 @@
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: justify;
-    font-size: 19px;
+    font-size: 20px;
     font-weight: lighter;
+    color: #757A77;
+    padding-right: 4px;
+    line-height: 1.8;
   }
 
-  h3 h2 p {
+  h3 p {
     font-family: 'Nunito', sans-serif;
   }
 }
