--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner"  background-color: #9ACFE1;">
+<div class="banner home-color">
   <div class="banner-content">
     <h1><%= image_tag "bookie_logo.svg", height: 50 %> BOOKIDS</h1>
     <p>Inspire your kids with personalized stories</p>
