--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-bookie">
+<div class="navbar-bookie <%= set_bg_color %>">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-bookie-brand" do %>
     <%= image_tag "bookie_logo.png", height: 50 %>
