fixed the personalization form

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,9 +20,74 @@
           <p><i class="fas fa-money-bill-alt"></i> <%= humanized_money_with_symbol(@book.price) %></p>
           <p><i class="fas fa-child"></i> <%=  @book.age %></p>
         </div>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+          Peronalize your book
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h2 class="modal-title" id="exampleModalLongTitle">Personalize your book</h2>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <!-- Simple Form -->
+                <%= simple_form_for [@book, @personalization], remote: true do |f| %>
+                  <% if @personalization.errors.any? %>
+                    <div class="errors-container">
+                      <ul>
+                        <% @personalization.errors.full_messages.each do |message| %>
+                        <li><%= message %></li>
+                        <% end %>
+                      </ul>
+                    </div>
+                  <% end %>
+
+                  <div id="form_personalization">
+                    <div class="row">
+                      <input class="form-control string optional" id="fancy-text" type="text" name="personalization[character_name]">
+                      <label class="form-control-label string optional" for="fancy-text">Name</label>
+                    </div>
+                    <div class="row">
+                      <input class="form-control string optional" id="fancy-text" type="text" name="personalization[character_age]">
+                      <label class="form-control-label string optional" for="fancy-text">Age</label>
+                    </div>
+                    <div class="gender-row">
+                      <div class="form-check-gender">
+                        <input class="hidden" type="radio" value="female" name="personalization[character_gender]" id="personalization_character_gender_female">
+                        <label class="choice" for="personalization_character_gender_female"><%= image_tag "girl.png" %></label>
+                      </div>
+                      <div class="form-check-gender">
+                        <input class="hidden" type="radio" value="male" name="personalization[character_gender]" id="personalization_character_gender_male">
+                        <label class="choice" for="personalization_character_gender_male"><%= image_tag "boy.png" %></label>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="modal-footer">
+                <div class="button-save">
+                  <%= f.submit class: 'save-button', value: "Save" %>
+                </div>
+
+                <div id="personalization-links"></div>
+              </div>
+              <% end %>
+
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
+
+<!-- Personalization Form -->
 
   <div style="margin-top:50px;margin-bottom:10px">
     <div class="line"></div>
@@ -46,8 +111,11 @@
       <%= f.submit class: 'btn btn-primary' %>
     </div>
   <% end %>
+
   <div id="personalization-links"></div>
 
+
+<!-- reviews -->
   <div style="margin-top:50px;margin-bottom:10px">
     <div class="line"></div>
   </div>
