--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -1,7 +1,17 @@
 
+.site-content-show {
+
+  width: 100%;
+  margin-top: 0;
+  background-color: white;
+}
+
+.photo-row {
+  margin-top: 100px;
+}
+
 .show-card {
   background-color: white;
-  margin-top: 150px;
   box-shadow: 0 4px 7px rgba(0,0,0,0.25), 0 3px 3px rgba(0,0,0,0.22);
   border-radius: 6px;
 }
