--- a/app/views/books/dashboard.html.erb
+++ b/app/views/books/dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="site-content-dashbaord">
+<div class="site-content-dashboard">
   <div class="wrapper">
         <div class="profile text-center">
           <div class="main">
