--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,10 +12,10 @@ $light-gray: #F4F4F4;
 
 
 // Pages color theme
-$index_color: $green;
-$show_color: $orange;
-$home_color: $blue;
-$dashboard_color: $red;
+$index_color: #B4D682;
+$show_color: #F0BD68;
+$home_color: #82D0E2;
+$dashboard_color: #F0BD68;
 
 .index-color {
   background-color: $index_color;
