--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,83 +1,84 @@
-<div class="wrapper">
-  <div class="show-card">
-    <div class="photo-row">
-    </div>
-    <div class="row">
-      <div class="col-sm-12 col-md-6 book-photo">
-        <%= image_tag(@book.photo, width: '100%', height: '100%') %>
+<div class="site-content-show">
+  <div class="wrapper">
+    <div class="show-card">
+      <div class="photo-row">
       </div>
-      <div class="col-sm-12 col-md-6 author-show">
-        <div class="bookmark">
-          <i class="fas fa-bookmark"></i>
+      <div class="row">
+        <div class="col-sm-12 col-md-6 book-photo">
+          <%= image_tag(@book.photo, width: '100%', height: '100%') %>
         </div>
-        <div class="description-show">
-          <h2><%= @book.name %></h2>
-          <h3>by <%= @book.author %></h3>
-          <p><%= @book.description %></p>
-        </div>
-        <div class="list-facts">
-          <p><i class="fas fa-search"></i> <%=  @book.category %></p>
-          <p><i class="fas fa-money-bill-alt"></i> <%= humanized_money_with_symbol(@book.price) %></p>
-          <p><i class="fas fa-child"></i> <%=  @book.age %></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div style="margin-top:50px;margin-bottom:10px">
-    <div class="line"></div>
-  </div>
-
-  <%= simple_form_for [@book, @personalization], remote: true do |f| %>
-    <% if @personalization.errors.any? %>
-      <div class="errors-container">
-        <ul>
-          <% @personalization.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
-
-    <div id="form_personalization" class="form-group">
-      <%= f.input :character_name, input_html: {class: 'form-control'}, label: false, placeholder: "name" %>
-      <%= f.input :character_age, input_html: {class: 'form-control'}, label: false, placeholder: "age" %>
-      <%= f.input :character_gender, input_html: {class: 'form-control'}, label: false, placeholder: "gender" %>
-      <%= f.submit class: 'btn btn-primary' %>
-    </div>
-  <% end %>
-  <div id="personalization-links"></div>
-
-  <div style="margin-top:50px;margin-bottom:10px">
-    <div class="line"></div>
-  </div>
-  <div>
-    <% @personalizations.each do |personalization| %>
-      <% personalization.reviews.each do |review| %>
-        <div class="reviews">
-          <div class="reviews-left">
-            <div class="review-stars">
-              <%= select_tag "stars", options_for_select((0..5).to_a, review.stars), class: "review-stars-select" %>
-            </div>
-            <div class="review-user">
-              <%= personalization.user.first_name %>
-            </div>
+        <div class="col-sm-12 col-md-6 author-show">
+          <div class="bookmark">
+            <i class="fas fa-bookmark"></i>
           </div>
-          <div class="review-right">
-            <div class="review-header">
-              <%= review.header %>
-            </div>
-            <div class="review-description">
-              <%= review.description %>
-            </div>
+          <div class="description-show">
+            <h2><%= @book.name %></h2>
+            <h3>by <%= @book.author %></h3>
+            <p><%= @book.description %></p>
+          </div>
+          <div class="list-facts">
+            <p><i class="fas fa-search"></i> <%=  @book.category %></p>
+            <p><i class="fas fa-money-bill-alt"></i> <%= humanized_money_with_symbol(@book.price) %></p>
+            <p><i class="fas fa-child"></i> <%=  @book.age %></p>
           </div>
         </div>
-      <div style="margin-top:50px;margin-bottom:10px">
-        <div class="line"></div>
       </div>
+    </div>
+
+    <div style="margin-top:50px;margin-bottom:10px">
+      <div class="line"></div>
+    </div>
+
+    <%= simple_form_for [@book, @personalization], remote: true do |f| %>
+      <% if @personalization.errors.any? %>
+        <div class="errors-container">
+          <ul>
+            <% @personalization.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
       <% end %>
-    <% end %>
-  </div>
 
+      <div id="form_personalization" class="form-group">
+        <%= f.input :character_name, input_html: {class: 'form-control'}, label: false, placeholder: "name" %>
+        <%= f.input :character_age, input_html: {class: 'form-control'}, label: false, placeholder: "age" %>
+        <%= f.input :character_gender, input_html: {class: 'form-control'}, label: false, placeholder: "gender" %>
+        <%= f.submit class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+    <div id="personalization-links"></div>
+
+    <div style="margin-top:50px;margin-bottom:10px">
+      <div class="line"></div>
+    </div>
+    <div>
+      <% @personalizations.each do |personalization| %>
+        <% personalization.reviews.each do |review| %>
+          <div class="reviews">
+            <div class="reviews-left">
+              <div class="review-stars">
+                <%= select_tag "stars", options_for_select((0..5).to_a, review.stars), class: "review-stars-select" %>
+              </div>
+              <div class="review-user">
+                <%= personalization.user.first_name %>
+              </div>
+            </div>
+            <div class="review-right">
+              <div class="review-header">
+                <%= review.header %>
+              </div>
+              <div class="review-description">
+                <%= review.description %>
+              </div>
+            </div>
+          </div>
+        <div style="margin-top:50px;margin-bottom:10px">
+          <div class="line"></div>
+        </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
 </div>
 
