--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -117,7 +117,44 @@
   min-width: 100%;
 }
 
+.search-filters {
+    display: flex;
+    justify-content: flex-start;
+}
 
+.slidecontainer {
+      margin-left: 33px;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 40%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    margin-bottom: 7%;
+}
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
 
 // .row-index {
 //   margin-top: 25px;
