--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,14 +16,30 @@
             <h2 class="search-results">Our search has resulted the following books:</h2>
           <% end %>
         </div>
-        <div class ="search-button-index">
-          <%= form_tag books_path, method: :get do %>
-            <%= text_field_tag :query,
-              params[:query],
-              class: "search-form form-control-index",
-              placeholder: "Enter Child's Age"
-            %>
-          <% end %>
+        <div class="search-filters">
+          <div class ="search-button-index">
+            <%= form_tag books_path, method: :get do %>
+              <%= text_field_tag :query,
+                params[:query],
+                class: "search-form form-control-index",
+                placeholder: "Enter Child's Age"
+              %>
+            <% end %>
+          <div>
+          <select name="skills" multiple="" class="ui fluid dropdown">
+              <option value="">Genre</option>
+            <option value="friends">Friends</option>
+            <option value="sleep">Sleep</option>
+            <option value="sports">Sports</option>
+            <option value="food">Food</option>
+          </select>
+          </div>
+        </div>
+         <div class="slidecontainer">
+            <input type="range" min="1" max="30" value="10" class="slider" id="myPriceRange">
+            <p>Price Range <span id="demo"></span></p>
+          </div>
+
         </div>
           <% @books.each do |book| %>
           <div class="col-sm-6 col-md-4 single-card">
@@ -49,3 +65,17 @@
     </div>
   </div>
 </div>
+
+  <script>
+          var slider = document.getElementById("myPriceRange");
+          var output = document.getElementById("demo");
+          output.innerHTML = slider.value; // Display the default slider value
+
+          // Update the current slider value (each time you drag the slider handle)
+          slider.oninput = function() {
+          output.innerHTML = this.value;
+          }
+        </script>
+
+        <%= javascript_pack_tag 'dropdown' %>
+
