--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -23,12 +23,14 @@
   h2 {
     padding: 10px;
     display: inline-block;
+    font-family: 'Gaegu';
+    font-weight: 500;
   }
 }
 
 .modal-footer {
-  display: flex;
-  justify-content: space-between;
+  display:flex;
+  justify-content:space-between;
 }
 
 #personalization-links {
@@ -57,6 +59,7 @@
 }
 
 .save-button {
+  margin-left:3px;
   padding:7px;
   width:70px;
   border-radius: 2px;
@@ -79,17 +82,22 @@ $blue: #0288D1;
 $darkBlue: #01579B;
 $gray: #ccc;
 
-form {
+#new_personalization{
   padding: 20px;
   margin: 0 auto;
   max-width: 600px;
   .gender-row {
+    width:60%;
     display: flex;
+    justify-content:space-around;
   }
   .form-check-gender {
     padding: 10px;
-    margin-bottom: 30px;
-    margin-top: 10px;
+    margin-bottom: 3px;
+    margin-top: 3px;
+    img {
+      width: 100%;
+    }
     .choice {
       background: white;
       border: 1px solid #F0BD68;
@@ -97,6 +105,8 @@ form {
       border-radius: 5px;
       text-align: center;
       color:#F0BD68;
+      width: 90px;
+      height: 90px;
       i {
         font-size: 35px;
       }
