--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -52,7 +52,9 @@
                 <div class="text">
                   <div class="age-stars-price-index">
                     <p><i class="fas fa-child"></i>  <%=book.age %></p>
-                    <p>Stars<%= %></p>
+                    <%= link_to like_book_path(@books) do %>
+                      <i class="far fa-heart"></i>
+                    <% end %>
                     <p><%= humanized_money_with_symbol(book.price) %></p>
                   </div>
                 </div>
