--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -12,7 +12,7 @@
   background-color: white;
   width: 100%;
   margin-right: 15px;
-  margin-left: 15px;
+  // margin-left: 15px;
   padding-right: 0;
   padding-left: 0;
   box-shadow: 0 4px 7px rgba(0,0,0,0.25), 0 3px 3px rgba(0,0,0,0.22);
@@ -54,6 +54,8 @@
 
 .body-personalization img {
   border-radius: 6px 6px 0px 0px;
+  height: 300px;
+  object-fit: cover;
 }
 
 
@@ -93,7 +95,12 @@
   grid-row: 4 / span 2;
   grid-column: 1 / span 2;
 }
-.main, .description, .stat {
+
+.profile .stars-dashboard {
+  grid-row: 6 / span 2;
+  grid-column: 1 / span 2;
+}
+.main, .description, .stat, .stars-dashboard {
   background: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   padding: 50px;
@@ -142,14 +149,21 @@
 
 .stat-content h2 {
   line-height: 1.7;
+
 }
 
 .description h3 {
   color: rgba(0,0,0,0.9);
   font-size: 21px;
   font-weight: normal;
+  font-family: 'Gaegu';
 }
 .description p {
   color: rgba(0,0,0,0.5);
   font-weight: lighter;
+}
+
+.description-content h1 {
+  font-family: 'Gaegu';
+  font-size: 42px;
 }
