--- a/app/views/books/dashboard.html.erb
+++ b/app/views/books/dashboard.html.erb
@@ -25,6 +25,32 @@
           </div>
           <div class="description">
             <div class="description-content">
+              <h1>Your books</h1>
+              <div class="row">
+                <% @personalizations.each do |personalization| %>
+                <div class=" col-sm-6 col-md-4">
+                  <div class="dashboard-booking">
+                    <div class="card-personalization">
+                      <div class="body-personalization">
+                        <%= image_tag(personalization.book.photo, width: '100%') %>
+                      </div>
+                      <div class="footer-own">
+                        <div class="review-dashboard">
+                          <%= link_to '<i class="fas fa-plus-circle"></i> Review'.html_safe, new_personalization_review_path(personalization) %>
+                          <%= link_to '<i class="fas fa-cloud-download-alt"></i> Download'.html_safe, new_personalization_review_path(personalization) %>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <% end %>
+              </div>
+            </div>
+          </div>
+
+          <div class="stars-dashboard">
+            <div class="description-content">
+              <h1>Your wishlist</h1>
               <div class="row">
                 <% @personalizations.each do |personalization| %>
                 <div class=" col-sm-6 col-md-4">
