--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -1,21 +1,20 @@
-<div class="banner"  background-color: #9ACFE1;">
-  <div class="banner-content">
+<div class="banner" ">
+  <div class="banner-content", background-image: url(image-path('bookies_background.jpg'));>
     <h1><%= image_tag "bookie_logo.svg", height: 50 %> BOOKIDS</h1>
-    <p>Inspire your kids with personalized stories</p>
+    <%= image_tag "linea_redonda.png" %>
+    <p>Amazing personalized stories
+    for amazing children</p>
     <div class ="search-button">
       <%= form_tag books_path, method: :get do %>
       <%= text_field_tag :query,
-        params[:query],
-        class: "search-form form-control",
+      params[:query],
+      class: "search-form form-control",
         placeholder: "Enter Book Genre"
-      %>
-    <% end %>
+        %>
+        <% end %>
+      </div>
+    </div>
   </div>
-  </div>
-  <div class ="swim_boy">
-    <%= image_tag "swim.png" %>
-  </div>
-</div>
 
 <div class="intro" >
   <div class="row">
@@ -46,6 +45,9 @@
       <%= image_tag "cloud.png" %>
     </div>
   </div>
+   </div>
+     <%= image_tag "banner_bottom_2.png", class:"banner_bottom" %>
+    <div>
 </div>
 
 <div class="landing-bottom">
@@ -66,4 +68,6 @@
       </div>
     </div>
 </div>
+
 <%= javascript_pack_tag 'carrousel' %>
+
