--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -6,8 +6,7 @@
 }
 
 .header {
-  margin: 1% 15% 5% 15%;
-  // background-color: #F0BD68;
+  margin-top: 70px;
   text-align: center;
 
   .fas {
@@ -120,6 +119,10 @@
 .search-filters {
     display: flex;
     justify-content: flex-start;
+
+    div {
+      flex: 1;
+    }
 }
 
 .slidecontainer {
