--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,26 +15,22 @@
           <h2 class="search-results">Our search has resulted the following books:</h2>
         <% end %>
       </div>
-      <div class="search-filters">
+      <div class="index-search">
+        <%= form_tag books_path, method: :get, class: 'search-filters' do %>
         <div class ="search-button-index">
-          <%= form_tag books_path, method: :get do %>
             <%= text_field_tag :query,
               params[:query],
               class: "search-form form-control-index",
               placeholder: "Enter Child's Age"
             %>
-          <% end %>
         </div>
-        <select name="" id="index-category">
-          <option value="friend">Friends</option>
-          <option value="sport">Sport</option>
-          <option value="sleep">Sleep</option>
-          <option value="food">Food</option>
-        </select>
+          <%= select_tag(:category, options_for_select([["Friends", "friends"], ["Sports", "sports"], ["Sleep", "sleep"], ["Food", "food"], ["Grow Up", "grow-up"]]), id: "index-category") %>
         <div class="slidecontainer">
-          <input type="range" min="1" max="30" value="10" class="slider" id="myPriceRange">
+          <%= range_field_tag('price_cents', nil, min: 1, max: 30, value: params[:price_cents] ? params[:price_cents] : 15, class: "slider", id: "myPriceRange") %>
           <p>Price Range <span id="demo"></span></p>
         </div>
+        <input type="submit" name="commit">
+        <% end %>
       </div>
 
       <% @books.each do |book| %>
