--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,13 +8,6 @@
       </div>
       <!-- MESSAGE NOT FOUND... LINK TO SHOW ALL BOOKS -->
       <% else %>
-      <div class="header">
-        <% if current_user != nil %>
-          <h2>Hi <%= current_user.first_name.capitalize %>, our search resulted in the following books:</h2>
-        <% else %>
-          <h2 class="search-results">Our search has resulted the following books:</h2>
-        <% end %>
-      </div>
       <div class="index-search">
         <%= form_tag books_path, method: :get, class: 'search-filters' do %>
         <div class ="search-button-index">
@@ -32,7 +25,13 @@
         <input type="submit" name="commit">
         <% end %>
       </div>
-
+      <div class="header">
+        <% if current_user != nil %>
+          <h2>Hi <%= current_user.first_name.capitalize %>, our search resulted in the following books:</h2>
+        <% else %>
+          <h2 class="search-results">Our search has resulted the following books:</h2>
+        <% end %>
+      </div>
       <% @books.each do |book| %>
       <div class="col-sm-6 col-md-4 single-card">
         <%= link_to book_path(book) do %>
@@ -44,8 +43,14 @@
             <div class="text">
               <div class="age-stars-price-index">
                 <p><i class="fas fa-child"></i>  <%=book.age %></p>
-                <%= link_to like_book_path(@books) do %>
-                  <i class="far fa-heart"></i>
+                <% if @favorite.nil? %>
+                  <%= link_to like_book_path(book), method:'patch' do %>
+                    <i class="fas fa-heart like"></i>
+                  <% end %>
+                <% else %>
+                  <%= link_to dislike_book_path(book), method:'patch' do %>
+                    <i class="fas fa-heart dislike"></i>
+                  <% end %>
                 <% end %>
                 <p><%= humanized_money_with_symbol(book.price) %></p>
               </div>
