--- a/app/assets/stylesheets/components/_review.scss
+++ b/app/assets/stylesheets/components/_review.scss
@@ -18,5 +18,11 @@
   display:flex;
   i {
     color:  #EDB867;
+    margin-right: 5px;
   }
+  float:right
+}
+
+.header-review {
+  margin-top: 60px;
 }
