--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -88,7 +88,7 @@
     </div>
 
 <!-- reviews -->
-    <h2>Reviews</h2>
+    <h2 class="header-review">Reviews</h2>
     <div class="average">
       <i class="fas fa-star"></i>
       <%= @average %>
