added favorites to dashboard

--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -101,21 +101,25 @@
   }
 
   .dislike {
+    margin-top:5px;
     color: gray;
     opacity: 0.5;
   }
 
   .dislike:hover {
+    margin-top:5px;
     color: red;
     opacity: 1;
   }
 
   .like {
+    margin-top:5px;
     color: red;
     opacity: 1;
   }
 
   .like:hover {
+    margin-top:5px;
     color: gray;
     opacity: 0.5;
   }
