--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -32,3 +32,7 @@ $dashboard_color: #F0BD68;
 .dashboard-color {
   background-color: $dashboard_color;
 }
+
+.checkout-color {
+  background-color: $dashboard_color;
+}
