--- a/app/views/books/dashboard.html.erb
+++ b/app/views/books/dashboard.html.erb
@@ -61,7 +61,7 @@
                       </div>
                       <div class="footer-own">
                         <div class="review-dashboard">
-                          <p>hallo</p>
+                          <%= link_to '<i class="fas fa-eye"></i> Display book'.html_safe, book_path(favorite.book) %>
                         </div>
                       </div>
                     </div>
