--- a/app/assets/stylesheets/components/_flipper-image.scss
+++ b/app/assets/stylesheets/components/_flipper-image.scss
@@ -2,3 +2,11 @@
   width: 240px;
   height: 400px;
 }
+
+.preview-image-full {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
