--- a/app/assets/stylesheets/components/_choices.scss
+++ b/app/assets/stylesheets/components/_choices.scss
@@ -125,8 +125,10 @@ $choices-button-offset: 8px !default;
   border: 1px solid $choices-keyline-color;
   border-radius: $choices-border-radius;
   font-size: $choices-font-size-md;
-  min-height: 44px;
   overflow: hidden;
+  height: 39px;
+  margin-left: 3px;
+  border-color: white;
   .is-focused &, .is-open & { border-color: darken($choices-keyline-color, 15%); }
   .is-open & { border-radius: $choices-border-radius $choices-border-radius 0 0; }
   .is-flipped.is-open & { border-radius: 0 0 $choices-border-radius $choices-border-radius; }
