--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -1,13 +1,24 @@
 .site-content-index {
+  padding-top: 12px;
   height: 100%;
   width: 100%;
-  margin-top: 0;
+  margin-top: 0%;
+  // background-color: white;
   background-color: #B4D682;
+  font-size: 15px;
+}
+
+.wrapper-search {
+  background: $blue;
+  margin-bottom: 50px;
+}
+
+.container-search {
+  margin: 0% 10%;
 }
 
 .header {
-  margin-top: 70px;
-  text-align: center;
+  margin-top: 55px;
 
   .fas {
     padding-right: 10px;
@@ -139,14 +150,16 @@
 .search-filters {
     display: flex;
     justify-content: flex-start;
+    width: 75%;
 
-    div {
-      flex: 1;
-    }
+    // div {
+    //   flex: 1;
+    // }
 }
 
 .slidecontainer {
-      margin-left: 33px;
+  margin-left: 33px;
+  text-align: center;
 }
 
 .slider {
@@ -180,8 +193,60 @@
 }
 
 .index-search {
-  background-color: white;
+  // background-color: white;
+  padding: 2.5% 0%;
+  // padding-bottom: 30px;
+  display: flex;
+  justify-content: flex-start;
+  background-color: #82D0E2;
+  flex-direction: column;
 }
+
+.apply-btn {
+  background-color: #fdbd6a;
+  border-color: #fdbd6a;
+  padding: 9px 20px;
+  height: 39px;
+  border-radius: 2.5px;
+  margin-left: 12px;
+}
+
+.search-results {
+
+  margin-bottom: -5px;
+  margin-top: -49px;
+  opacity: 0.75;
+  padding-left: 10px;
+  font-size: 14px;
+}
+
+.search-button-index {
+    .search-form {
+    font-size: 15px;
+    border-radius: 2.5px;
+    text-align: left;
+    background-color: #f9f9f9;
+    color: black !important;
+    border-color: white;
+    width: 100%;
+    margin-bottom: 4%;
+    margin-left: 4%;
+    padding: 0px 20px;
+    height: 40px;
+    -webkit-appearance: none;
+    border: none;
+
+    &::placeholder {
+      color: black;
+    }
+
+    &:focus {
+      border-color: rgba(255, 255, 255, 0.5);
+      box-shadow: none;
+    }
+  }
+}
+
 // .row-index {
 //   margin-top: 25px;
 
@@ -196,7 +261,11 @@
 //   visibility: visible;
 //   opacity: 1;
 // }
+.choices {
+  width: 170px;
+  margin-left: 32px;
 
+}
 
 
 
