worked on checkout, show and banner

--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -20,7 +20,7 @@
 <div class="intro" >
   <div class="row">
     <div class="col-xs-12 home-description">
-      <h1>Welcome to Bookies</h1>
+      <h1>Welcome to Bookids</h1>
       <p>The funniest way to educate and share stunning personalized stories with your kids.</p>
     </div>
   </div>
@@ -39,7 +39,7 @@
       <div class="step_by_step last"  >
         <%= image_tag "icon3.png", class:"intro-icons"  %>
         <h1>Print it or download it</h1>
-        <p>Print an awesome book or download it straight to your ipad.</p>
+        <p>Print an awesome book or download it straight to your phone, ipad or laptop.</p>
       </div>
     </div>
     <div class ="cloud">
@@ -54,8 +54,7 @@
 <div class="landing-bottom">
  <div class="row">
     <div class="col-xs-12 home-description">
-        <h1>Welcome to Bookies</h1>
-        <p>The funniest way to educate and share stunning personalized stories with your kids.</p>
+        <h1>Search by categories</h1>
         </div>
         <div class = "carrousel_filter">
           <%= link_to "sleep", filtered_books_path(category: "sleep"), class: "btn-carrousel", remote: true %>
