--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -1,15 +1,17 @@
 .site-content-index {
-  padding-top: 12px;
+  padding-top: 2px;
   height: 100%;
   width: 100%;
   margin-top: 0%;
   // background-color: white;
-  background-color: #B4D682;
+  background-color: #82D0E2;
   font-size: 15px;
+  margin-bottom: -50px;
+  margin-top: -4%;
 }
 
 .wrapper-search {
-  background: $blue;
+  background: #B4D682;
   margin-bottom: 50px;
 }
 
@@ -171,9 +173,9 @@
     width: 40%;
     height: 15px;
     border-radius: 5px;
-    background: #d3d3d3;
+    background: white;
     outline: none;
-    opacity: 0.7;
+    opacity: 0.9;
     -webkit-transition: .2s;
     transition: opacity .2s;
     margin-bottom: 7%;
@@ -184,7 +186,7 @@
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    background: #4CAF50;
+    background: #B4D682;
     cursor: pointer;
 }
 
@@ -192,7 +194,8 @@
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    background: #4CAF50;
+    background: #B4D682;
+    border-color: white;
     cursor: pointer;
 }
 
@@ -204,6 +207,8 @@
   justify-content: flex-start;
   background-color: #82D0E2;
   flex-direction: column;
+  margin-top: -19px;
+  margin-left: -9px;
 }
 
 .apply-btn {
@@ -226,7 +231,7 @@
 
 .search-button-index {
     .search-form {
-    font-size: 15px;
+    font-size: 14px;
     border-radius: 2.5px;
     text-align: left;
     background-color: #f9f9f9;
@@ -236,7 +241,7 @@
     margin-bottom: 4%;
     margin-left: 4%;
     padding: 0px 20px;
-    height: 40px;
+    height: 39px;
     -webkit-appearance: none;
     border: none;
 
