worked on banner fonts and margins

--- a/app/assets/stylesheets/components/_home_carrousel.scss
+++ b/app/assets/stylesheets/components/_home_carrousel.scss
@@ -11,8 +11,8 @@
 
   h1 {
     color: white;
-    font-size: 40px;
-    font-family: 'Montserrat', sans-serif;
+    font-size: 60px;
+    font-family: 'Gaegu';
   }
   p {
       color: #565656;
@@ -55,7 +55,7 @@
 }
 
 .home-description{
-  margin-bottom: 16px;
+  margin-bottom: 40px;
 }
 
 
