--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -18,7 +18,7 @@ $home_color: #82D0E2;
 $dashboard_color: #F0BD68;
 
 .index-color {
-  background-color: $blue;
+  background-color: $index_color;
 }
 
 .show-color {
