--- a/app/views/books/home.html.erb
+++ b/app/views/books/home.html.erb
@@ -24,29 +24,31 @@
       <p>The funniest way to educate and share stunning personalized stories with your kids.</p>
     </div>
   </div>
-  <div class="row">
-    <div class=" steps">
-      <div class="step_by_step">
-        <%= image_tag "icon1.png", class:"intro-icons" %>
-        <h1>Search for inspiration</h1>
-        <p >Select what kind of story you want to share with your kids.</p>
+  <div class="col-xs-12">
+    <div class="row">
+      <div class=" steps">
+        <div class="step_by_step">
+          <%= image_tag "icon1.png", class:"intro-icons" %>
+          <h1>Search for inspiration</h1>
+          <p >Select what kind of story you want to share with your kids.</p>
+        </div>
+        <div class="step_by_step">
+          <%= image_tag "icon2.png", class:"intro-icons" %>
+          <h1>Personalize your story</h1>
+          <p>Make the story personal and add some personal details to make it stunning!</p>
+        </div>
+        <div class="step_by_step last"  >
+          <%= image_tag "icon3.png", class:"intro-icons"  %>
+          <h1>Print it or download it</h1>
+          <p>Print an awesome book or download it straight to your phone, ipad or laptop.</p>
+        </div>
       </div>
-      <div class="step_by_step">
-        <%= image_tag "icon2.png", class:"intro-icons" %>
-        <h1>Personalize your story</h1>
-        <p>Make the story personal and add some personal details to make it stunning!</p>
-      </div>
-      <div class="step_by_step last"  >
-        <%= image_tag "icon3.png", class:"intro-icons"  %>
-        <h1>Print it or download it</h1>
-        <p>Print an awesome book or download it straight to your phone, ipad or laptop.</p>
+      <div class ="cloud">
+        <%= image_tag "cloud.png" %>
       </div>
     </div>
-    <div class ="cloud">
-      <%= image_tag "cloud.png" %>
-    </div>
-  </div>
    </div>
+ </div>
      <%= image_tag "banner_bottom_2.png", class:"banner_bottom" %>
     <div>
 </div>
