worked on review form design

--- a/app/assets/stylesheets/components/_checkout.scss
+++ b/app/assets/stylesheets/components/_checkout.scss
@@ -106,7 +106,8 @@
 }
 
 .stripe-button-el span {
-  font-family: sans-serif !important;
+  font-family: 'Gaegu' !important;
+  font-size: 50px !important;
   -webkit-font-smoothing: antialiased;
   font-weight: normal !important;
   font-size: 1em !important;
