--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -80,6 +80,7 @@
     width: 570px;
     height: 46px;
     margin-top: 20px;
+    padding-top: 10px;
 
     &::placeholder {
       color: rgba(255, 255, 255, 0.7);
