--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -109,21 +109,22 @@
   }
 
   .dislike {
-    margin-top:5px;
+    margin-top: 6px;
     color: gray;
     opacity: 0.5;
+    font-size: 20px;
   }
 
   .dislike:hover {
-    margin-top:5px;
-    color: red;
-    opacity: 1;
+    margin-top: 6px;
+    opacity: 0.7;
   }
 
   .like {
-    margin-top:5px;
-    color: red;
+    margin-top: 6px;
+    color: #C7374B;
     opacity: 1;
+    font-size: 20px;
   }
 
   .like:hover {
