--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -1,7 +1,7 @@
 .banner {
   color: white;
   text-align: center;
-  background: url('bookies_background.jpg');
+  background: image-url('bookies_background.jpg');
   height: calc(100vh - 0px);
   position: relative;
 
