worked on dashboard cards and checkout button design

--- a/app/assets/stylesheets/components/_checkout.scss
+++ b/app/assets/stylesheets/components/_checkout.scss
@@ -103,6 +103,7 @@
   font-weight: normal !important;
   margin-bottom: 20px;
   height: 50px;
+  font-size: 22px;
 }
 
 .stripe-button-el span {
@@ -118,6 +119,8 @@
   background: #B4D682 !important;
   background-color: #B4D682 !important;
   text-shadow: none !important;
+  box-shadow: none !important;
+
 }
 
 // .stripe-button-el span:hover {
