--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -162,7 +162,10 @@
   font-weight: lighter;
 }
 
-.description-content h1 {
+.description-content {
+  width: 100%;
+  h1 {
   font-family: 'Gaegu';
   font-size: 42px;
+  }
 }
