--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -86,7 +86,7 @@
 
       </div>
     </div>
-
+  <% if @book.reviews.any? %>
 <!-- reviews -->
     <h2 class="header-review">Reviews</h2>
     <div class="average">
@@ -120,6 +120,8 @@
         <% end %>
       <% end %>
     </div>
+
+  <% end %>
   </div>
 </div>
 
