worked on checkout and show fonts and margins

--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -29,7 +29,6 @@
   margin-bottom: 22px;
   margin-top: 7%;
 
-
   .fas {
     padding-right: 10px;
     color: #B4D682;
@@ -38,8 +37,8 @@
 
   p {
     font-family: 'Gaegu';
-    font-weight: 500;
-    font-size: 24px;
+    font-size: 22px;
+
   }
 }
 
@@ -61,7 +60,9 @@
   padding-left: 30px;
   padding-right: 55px;
   position: relative;
+}
 
+.description-show {
 
   h2{
     padding-bottom: 1px;
