--- a/app/assets/stylesheets/components/_checkout.scss
+++ b/app/assets/stylesheets/components/_checkout.scss
@@ -4,8 +4,8 @@
 }
 
 .checkout-wrapper {
-  margin-left: 30%;
-  margin-right: 30%;
+  margin-left: 25%;
+  margin-right: 25%;
   margin-bottom: 10%;
   border-radius: 6px;
   background-color: white;
@@ -14,6 +14,16 @@
 
 .description-checkout {
   margin-top: 6%;
+
+  h2 {
+    font-family: 'Gaegu';
+    font-size: 46px;
+    color: #F0BD68;
+  }
+
+  p {
+    font-weight: 300;
+  }
 }
 
 
@@ -24,6 +34,8 @@
 
   p {
     padding-bottom: 1px;
+    font-weight: 300;
+    font-family: 'Nunito', sans-serif;
   }
 }
 
@@ -32,7 +44,7 @@
     justify-content: center;
     align-items: center;
   img {
-    width: 40%;
+    width: 37%;
     margin-top: 5%;
     border-radius: 15px;
 
