--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -216,6 +216,10 @@
   margin-left: -9px;
 }
 
+.choices_input {
+  display: none;
+}
+
 .apply-btn {
   background-color: #fdbd6a;
   border-color: #fdbd6a;
