--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-b<div class="site-content-index">
+<div class="site-content-index">
   <div class="container-search">
       <% if @books.count == 0 %>
         <div class="not">
