worked on confirmation page design and navbar helper

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -36,3 +36,7 @@ $dashboard_color: #F0BD68;
 .checkout-color {
   background-color: $dashboard_color;
 }
+
+.confirmation-color {
+ background-color: $index-color;
+}
