--- a/app/assets/stylesheets/components/_confirmation.scss
+++ b/app/assets/stylesheets/components/_confirmation.scss
@@ -1,3 +1,16 @@
+.site-content-confirmation {
+  padding-top: 2px;
+  height: 100%;
+  width: 100%;
+  margin-top: 0%;
+  // background-color: white;
+  background-color: #B4D682;
+  font-size: 15px;
+  margin-bottom: -50px;
+  margin-top: -4%;
+
+}
+
 .payed-wrapper {
   margin-left: 20%;
   margin-right:20%;
@@ -19,14 +32,61 @@
   top:20px;
   .fas {
     color: green;
+    margin: 35px;
+    font-size: 120px;
+  }
+
+  h3 {
+    font-family: 'Gaegu';
+    font-weight: 500;
     font-size: 50px;
+    color: #F0BD68;
+    padding-bottom: 20px;
   }
 }
 
+// .order-summary {
+//   text-align: center;
+//   font-weight:lighter;
+// }
 .order-summary {
-  text-align: center;
-  font-weight:lighter;
+  margin-bottom: 20px;
+  margin-top: 40px;
+  vertical-align: middle;
+  margin-left: 20%;
+  margin-right: 20%;
+  line-height: 1.9;
+
+  td {
+    font-size: 17px;
+    font-weight: lighter;
+  }
+
 }
 
+.back-to-confirmation {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 3%;
+  margin-top: 6%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
 
+.confirmation-information {
+  font-size: 17px;
+  font-weight: lighter;
+
+    a {
+    color: black;
+    font-family: 'Gaegu';
+    font-size: 24px;
+    font-weight: 500;
+    border:none;
+  }
+
+  a:hover {
+    text-decoration: none;
+  }
+}
 
