--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,19 +1,35 @@
-<h1>Order</h1>
-
-<div class="payed-wrapper">
-  <ul>
-    <div class="icon">
-      <i class="fas fa-check-circle"></i>
-      <h3>Your order is confirmed</h3>
-    </div>
-    <div class="order-summary">
-      <li>First name: <%= @order.user.first_name %></li>
-      <li>Last name: <%= @order.user.last_name %></li>
-      <li>Status: <%= @order.state %></li>
-      <li>Book: <%= @order.user.personalizations.last.book.name %></li>
-      <li><strong>Amount: <%= humanized_money_with_symbol(@order.amount) %></strong></li>
-    </div>
-  <ul>
+<div class="site-content-confirmation">
+  <div class="wrapper">
+    <div class="payed-wrapper">
+        <div class="icon">
+          <i class="fas fa-check-circle"></i>
+          <h3>Your order is confirmed</h3>
+          <div class="confirmation-information">
+            <p> To view all your books and download them go to to your <%= link_to "dashboard", dashboard_path %>. If you want to check out more books for your kids go to <%= link_to "all books", books_path %>.</p>
+          </div>
+        </div>
+        <table style="width:100%" class="order-summary">
+          <tr>
+            <td>Name</td>
+            <td><%= @order.user.first_name %> <%= @order.user.last_name %></td>
+          </tr>
+          <tr>
+            <td>Book</td>
+            <td><%= @order.user.personalizations.last.book.name%></td>
+          </tr>
+          <tr>
+            <td>Status</td>
+            <td><%= @order.state %></td>
+          </tr>
+          <tr>
+            <td><strong>Amount</strong></td>
+            <td><strong><%= humanized_money_with_symbol(@order.amount) %></strong></td>
+          </tr>
+        </table>
+      <div class="back-to-confirmation">
+        <%= link_to "Dashboard", dashboard_path, class: "navbar-bookie-item navbar-bookie-link btn btn-primary" %>
+        <%= link_to "All books", books_path, class: "navbar-bookie-item navbar-bookie-link btn btn-primary" %>
+      </div>
+     </div>
+  </div>
 </div>
-
-
