--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -16,6 +16,7 @@ $index_color: #B4D682;
 $show_color: #F0BD68;
 $home_color: #82D0E2;
 $dashboard_color: #F0BD68;
+$personalization_color: #9ACFE1;
 
 .index-color {
   background-color: $index_color;
@@ -39,4 +40,8 @@ $dashboard_color: #F0BD68;
 
 .confirmation-color {
  background-color: $index-color;
+}
+
+.personalization-color {
+ background-color: $personalization-color;
 }
