--- a/app/views/personalizations/show.html.erb
+++ b/app/views/personalizations/show.html.erb
@@ -1,54 +1,54 @@
-<div class="flipper-title">
-  <h1 class="preview-title"> Your Story Preview</h1>
-</div>
-<div class="book-container">
-  <div class="btns">
-    <button class="prev"></button>
-    <button class="next"></button>
-  </div>
-  <div class="flipper3">
+<div class="site-content-personalization">
+  <div class="wrapper">
+    <div class="book-container">
+      <div class="btns">
+        <button class="prev"></button>
+        <button class="next"></button>
+      </div>
+      <div class="flipper3">
 
-  </div>
-  <div class="flipper2">
+      </div>
+      <div class="flipper2">
 
-  </div>
-  <div class="flipper">
-    <div class="current left page <%= @dataset_flipper[0][:color] %> ontop">
-      <% if @dataset_flipper[0][:image] && false%>
-        <img src="<%#= @dataset_flipper[0][:image] %>" alt="" class="preview-image">
-      <% else %>
-        <%= @dataset_flipper[0][:content].html_safe %>
+      </div>
+      <div class="flipper">
+        <div class="current left page <%= @dataset_flipper[0][:color] %> ontop">
+          <% if @dataset_flipper[0][:image] && false%>
+            <img src="<%#= @dataset_flipper[0][:image] %>" alt="" class="preview-image">
+          <% else %>
+            <%= @dataset_flipper[0][:content].html_safe %>
+          <% end %>
+        </div>
+        <div class="shadow-left"></div>
+        <div class="current right page <%= @dataset_flipper[1][:color] %> ontop">
+          <% if @dataset_flipper[1][:image] %>
+            <img src="<%= @dataset_flipper[1][:image] %>" alt="">
+          <% else %>
+            <%= @dataset_flipper[1][:content].html_safe  %>
+          <% end %>
+        </div>
+        <div class="shadow-right"></div>
+      </div>
+
+    </div>
+
+
+    <div class="customized-pages1">
+      <!--  <%= @content_with_name%> -->
+
+      <%= content_tag :div,
+      nil,
+      id: 'data-flipper',
+      data: { pages: @dataset_flipper} %>
+    </div>
+
+    <!-- payment form -->
+    <div class="payment-button">
+      <%= form_tag orders_path do %>
+      <%= hidden_field_tag 'personalization_id', @personalization.id %>
+      <%= submit_tag 'Purchase', class: 'btn btn-primary purchase' %>
       <% end %>
     </div>
-    <div class="shadow-left"></div>
-    <div class="current right page <%= @dataset_flipper[1][:color] %> ontop">
-      <% if @dataset_flipper[1][:image] %>
-        <img src="<%= @dataset_flipper[1][:image] %>" alt="">
-      <% else %>
-        <%= @dataset_flipper[1][:content].html_safe  %>
-      <% end %>
-    </div>
-    <div class="shadow-right"></div>
+    <%= javascript_pack_tag 'flipper' %>
   </div>
-
 </div>
-
-
-<div class="customized-pages1">
-  <!--  <%= @content_with_name%> -->
-
-  <%= content_tag :div,
-  nil,
-  id: 'data-flipper',
-  data: { pages: @dataset_flipper} %>
-</div>
-
-<!-- payment form -->
-<div class="payment-button">
-  <%= form_tag orders_path do %>
-  <%= hidden_field_tag 'personalization_id', @personalization.id %>
-  <%= submit_tag 'Purchase', class: 'btn btn-primary purchase' %>
-  <% end %>
-</div>
-<%= javascript_pack_tag 'flipper' %>
-
