--- a/app/views/books/dashboard.html.erb
+++ b/app/views/books/dashboard.html.erb
@@ -37,7 +37,7 @@
                       <div class="footer-own">
                         <div class="review-dashboard">
                           <%= link_to '<i class="fas fa-plus-circle"></i> Review'.html_safe, new_personalization_review_path(personalization) %>
-                          <%= link_to show_pdf_path(format: :pdf) do %>
+                          <%= link_to show_pdf_personalization_path(personalization, format: :pdf) do %>
                             <i class="fas fa-cloud-download-alt"></i> Download
                           <% end %>
                         </div>
