--- a/app/assets/stylesheets/components/_indexcards.scss
+++ b/app/assets/stylesheets/components/_indexcards.scss
@@ -19,7 +19,7 @@
 }
 
 .container-search {
-  margin: 0% 10%;
+  margin: 0;
 }
 
 .header {
@@ -32,6 +32,12 @@
   h2 {
     font-size: 22px;
     line-height: 1.3;
+  }
+
+  p {
+    font-family: 'Gaegu';
+    font-size: 32px;
+    margin-bottom: 25px;
   }
 }
 
@@ -215,6 +221,7 @@
   flex-direction: column;
   margin-top: -19px;
   margin-left: -9px;
+  margin-bottom: 20px;
 }
 
 .choices_input {
