--- a/app/views/personalizations/show.html.erb
+++ b/app/views/personalizations/show.html.erb
@@ -46,7 +46,7 @@
     <div class="payment-button">
       <%= form_tag orders_path do %>
       <%= hidden_field_tag 'personalization_id', @personalization.id %>
-      <%= submit_tag 'Purchase', class: 'btn btn-primary purchase' %>
+      <%= submit_tag 'Purchase', class: 'btn btn-primary' %>
       <% end %>
     </div>
     <%= javascript_pack_tag 'flipper' %>
